--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "package-lock.json": true,
         "**/node_modules/**": true,
         "**/.git/objects/**": true,
-        "**/.git/subtree-cache/**": true
+        "**/.git/subtree-cache/**": true,
+        "**/react-app-env.d.ts": true
     }
 }
