--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "author": "NoHomey",
   "license": "MIT",
   "devDependencies": {
-    "@types/react-redux": "^7.1.1",
-    "create-react-app": "^3.0.1"
+    "@types/react-redux": "^7.1.2",
+    "create-react-app": "^3.1.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
