--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "create-react-app": "^3.1.1"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.2",
     "@material-ui/styles": "^4.3.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
+    "date-fns": "^2.0.0-beta.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
