--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
+    "@types/redux-first-router": "^2.1.4",
     "date-fns": "^2.0.0-beta.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-first-router": "^2.1.4",
     "reselect": "^4.0.0",
     "typescript": "3.5.3"
   },
