adding saga to persist language settings

--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@types/react-dom": "16.8.5",
     "@types/redux-first-router": "^2.1.4",
     "date-fns": "^2.0.0-beta.5",
+    "localforage": "^1.7.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-first-router": "^2.1.4",
+    "redux-saga": "^1.0.5",
     "reselect": "^4.0.0",
     "typescript": "3.5.3"
   },
