--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
-    "@material-ui/core": "^4.3.2",
+    "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.2",
-    "@material-ui/styles": "^4.3.0",
+    "@material-ui/pickers": "^3.2.4",
+    "@material-ui/styles": "^4.3.3",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "@types/redux-first-router": "^2.1.4",
     "@types/validator": "^10.11.3",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.0.1",
     "localforage": "^1.7.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-first-router": "^2.1.4",
