--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react-redux": "^7.1.2",
-    "create-react-app": "^3.1.1"
+    "create-react-app": "^3.1.1",
+    "http-proxy-middleware": "^0.20.0"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
@@ -55,6 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
